--- a/Result/ANU Result.html
+++ b/Result/ANU Result.html
@@ -194,7 +194,7 @@
                 <div class="mt-6 bg-emerald-50 p-4 rounded-lg">
                     <div class="flex justify-between items-center">
                         <span class="text-gray-700 font-medium rtl">المعدل التراكمي للفصل الصيفي</span>
-                        <span class="text-2xl font-bold university-text">1.65</span>
+                        <span class="text-2xl font-bold university-text"></span>
                     </div>
                     <div class="flex justify-between items-center mt-2">
                         <span class="text-gray-700 font-medium ltr">Summer Semester GPA</span>
@@ -204,7 +204,7 @@
 
                 <!-- Status -->
                 <div class="mt-4 p-4 bg-yellow-50 border border-yellow-200 rounded-lg">
-                    <p class="text-yellow-800 font-medium rtl">⚠️ تحتاج إلى تحسين الدرجات في الفصل القادم</p>
+                    <p class="text-yellow-800 font-medium rtl">⚠️ سوف يتم الاعلان عن التقدير الفصلي قريبا</p>
                     <p class="text-yellow-700 text-sm mt-1 ltr">Academic improvement required for next semester</p>
                 </div>
             </div>
@@ -262,4 +262,5 @@
         });
     </script>
 </body>
+
 </html>
